--- a/requirements.txt
+++ b/requirements.txt
@@ -12,16 +12,15 @@ Jinja2==2.11.1
 jsonschema==3.2.0
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
-matplotlib==3.1.3
+matplotlib>=2.2.3
 mpmath==1.1.0
-numpy==1.18.1
-pandas==1.0.1
+numpy==>=1.15.1
+pandas>=0.23.4
 petab==0.1.1
-pkg-resources==0.0.0
 pyparsing==2.4.6
 pyrsistent==0.15.7
 python-dateutil==2.8.1
-python-libsbml==5.18.0
+python-libsbml>=5.17.0
 pytz==2019.3
 PyYAML==5.3
 scipy==1.4.1
