--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib>=2.2.3
 mpmath==1.1.0
-numpy==>=1.15.1
+numpy>=1.15.1
 pandas>=0.23.4
 petab==0.1.1
 pyparsing==2.4.6
